achievement section added

--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
                 </ul>
             </div>
         </section>
+        <section class="success">
+            <div class="success-img">
+                <img src="./images/award.png" alt="">
+            </div>
+            <div class="success-texts">
+                <h2 class="section_title">
+                    My achievements of previous year
+                </h2>
+                <p class="section_subtitle">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature
+                    from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                <ul>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
+                    <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
         <section class="my-plans">
             <h2 class="section_title center-text"> My plans</h2>
             <div class="plans">
